Adjusted settings and dependency injection

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureSqlConnection": "Colocar string de conexao aqui"
+  }
 }
