Changed In-Memory Database + Migrations #15

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureSqlConnection": "Colocar string de conexao aqui"
+    "SqliteInMemoryConnection": "Data Source=InMemorySample;Mode=Memory;Cache=Shared"
   }
 }
