--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.10",
+    "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
     "expo-splash-screen": "~0.6.2",
@@ -20,6 +22,7 @@
     "react-native": "~0.63.3",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-paper": "^4.5.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-reflect": "^0.1.6",
     "react-native-safe-area-context": "3.1.4",
