Fixed in-memory database bug: connection closed too early #3

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteInMemoryConnection": "Data Source=InMemorySample;Mode=Memory;Cache=Shared"
+    "SqliteInMemoryConnection": "DataSource=file::memory:?cache=shared"
   }
 }
