--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
     "expo": "~39.0.2",
+    "expo-gl": "~9.1.1",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
+    "expo-three": "^5.5.1",
     "expo-updates": "~0.3.2",
     "lottie-react-native": "~2.6.1",
     "react": "16.13.1",
@@ -33,7 +35,8 @@
     "react-native-screens": "~2.10.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "three": "^0.124.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
