--- a/frontend/.travis.yml
+++ b/frontend/.travis.yml
@@ -6,6 +6,6 @@ cache:
   directories:
     - ~/.npm
 before_script:
-  - npm install -g npm@latest
+  - cd frontend && npm install -g npm@latest
 script:
   - npm ci
