--- a/backend/QuizMania.WebAPI.csproj
+++ b/backend/QuizMania.WebAPI.csproj
@@ -32,4 +32,9 @@
       <Folder Include="Migrations\" />
     </ItemGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+
 </Project>
