--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -17,6 +17,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    cd frontend && npm install
-    npm run build
-  displayName: 'npm install and build'
+    cd frontend && npm install -g npm@latest
+
+- script: 
+    npm ci
