Update azure-pipelines-frontend.yml with new attempt to run a build and jest unit tests

--- a/azure-pipelines-frontend.yml
+++ b/azure-pipelines-frontend.yml
@@ -18,6 +18,7 @@ steps:
 
 - script: |
     cd frontend && npm install -g npm@latest
+    cd frontend && npm run build
 
 - script: 
-    npm ci
+    jest --ci --reporters=jest-junit --reporters=default
