--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -16,7 +16,8 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+- task: Npm@1
+  inputs:
+    command: 'ci'
+    workingDir: '/frontend'
+    verbose: true
