Added default working directory to CI task

--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -19,4 +19,5 @@ steps:
 - task: Npm@1
   inputs:
     command: 'ci'
+    workingDir: '$(System.DefaultWorkingDirectory)/frontend'
     verbose: true
