--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "@babel/core": "~7.9.0",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
+    "jest-junit": "^12.0.0",
     "react-test-renderer": "~16.13.1"
   },
   "jest": {
