--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -25,8 +25,8 @@ steps:
   displayName: 'Publish Jest Unit Tests Results'
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: 'junit.xml'
-    searchFolder: '$(System.DefaultWorkingDirectory)/frontend'
+    testResultsFiles: '**/junit.xml'
+    searchFolder: '$(System.DefaultWorkingDirectory)'
     mergeTestResults: true
     failTaskOnFailedTests: true
     testRunTitle: 'Publish Jest Unit Tests Results'
