--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 - task: Npm@1
   inputs:
     command: custom
-    customCommand: 'test --ci --reporters=default --reporters=jest-junit'
+    customCommand: 'test -- --ci --reporters=default --reporters=jest-junit'
     workingDir: '$(System.DefaultWorkingDirectory)/frontend'
     verbose: true
     
