Added recursive search for unit test results

--- a/frontend/azure-pipelines.yml
+++ b/frontend/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
   displayName: 'Publish Jest Unit Tests Results'
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: 'junit.xml'
+    testResultsFiles: '**/junit.xml'
     searchFolder: '$(System.DefaultWorkingDirectory)'
     mergeTestResults: true
     failTaskOnFailedTests: true
