--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,7 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12",
-    "three": "^0.124.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
